--- a/SaleSquared/src/Presentation_Layer/Anuncio/Anuncio_NovaCompra1.form
+++ b/SaleSquared/src/Presentation_Layer/Anuncio/Anuncio_NovaCompra1.form
@@ -152,11 +152,17 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Morada do perfil"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="moradaperfilActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JRadioButton" name="novamorada">
       <Properties>
         <Property name="text" type="java.lang.String" value="Alterar morada de entrega"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="novamoradaActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JPanel" name="jPanel1">
 
