--- a/SaleSquared/src/Presentation_Layer/Anuncio/Anuncio_NovaCompra1.form
+++ b/SaleSquared/src/Presentation_Layer/Anuncio/Anuncio_NovaCompra1.form
@@ -180,16 +180,16 @@
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" attributes="0">
-                                  <Component id="jXTextField2" min="-2" pref="80" max="-2" attributes="0"/>
+                                  <Component id="cp1" min="-2" pref="80" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="jXTextField3" min="-2" pref="52" max="-2" attributes="0"/>
+                                  <Component id="cp2" min="-2" pref="52" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Component id="cpv" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace min="0" pref="38" max="32767" attributes="0"/>
                               </Group>
-                              <Component id="jXTextField4" max="32767" attributes="0"/>
+                              <Component id="loc" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
@@ -200,10 +200,10 @@
                           <EmptySpace min="-2" pref="56" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="0" attributes="0">
-                                  <Component id="jComboBox1" min="-2" pref="156" max="-2" attributes="0"/>
+                                  <Component id="pais" min="-2" pref="156" max="-2" attributes="0"/>
                                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                               </Group>
-                              <Component id="jXTextField1" max="32767" attributes="0"/>
+                              <Component id="morada" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -221,21 +221,21 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jComboBox1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="pais" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jXTextField1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="morada" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="mv" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jXTextField2" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="cp1" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel9" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jXTextField3" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="cp2" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Component id="cpv" min="-2" max="-2" attributes="0"/>
                   </Group>
@@ -244,7 +244,7 @@
                       <Component id="lv" min="-2" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel8" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jXTextField4" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="loc" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
@@ -285,7 +285,7 @@
             <Property name="text" type="java.lang.String" value="Localidade"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JComboBox" name="jComboBox1">
+        <Component class="javax.swing.JComboBox" name="pais">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="4">
@@ -297,18 +297,18 @@
             </Property>
           </Properties>
         </Component>
-        <Component class="org.jdesktop.swingx.JXTextField" name="jXTextField1">
+        <Component class="org.jdesktop.swingx.JXTextField" name="morada">
         </Component>
-        <Component class="org.jdesktop.swingx.JXTextField" name="jXTextField2">
+        <Component class="org.jdesktop.swingx.JXTextField" name="cp1">
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel9">
           <Properties>
             <Property name="text" type="java.lang.String" value="-"/>
           </Properties>
         </Component>
-        <Component class="org.jdesktop.swingx.JXTextField" name="jXTextField3">
+        <Component class="org.jdesktop.swingx.JXTextField" name="cp2">
         </Component>
-        <Component class="org.jdesktop.swingx.JXTextField" name="jXTextField4">
+        <Component class="org.jdesktop.swingx.JXTextField" name="loc">
         </Component>
         <Component class="javax.swing.JLabel" name="mv">
           <Properties>
