--- a/SaleSquared/src/Presentation_Layer/Header/Barra_Pesquisa.form
+++ b/SaleSquared/src/Presentation_Layer/Header/Barra_Pesquisa.form
@@ -55,6 +55,7 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jXSearchField1ActionPerformed"/>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jXSearchField1KeyPressed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JComboBox" name="jComboBox1">
