--- a/SaleSquared/src/Presentation_Layer/Anuncio/Anuncio_NovaCompra1.form
+++ b/SaleSquared/src/Presentation_Layer/Anuncio/Anuncio_NovaCompra1.form
@@ -23,7 +23,7 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
@@ -49,13 +49,11 @@
                   <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Component id="moradaperfil" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Component id="novamorada" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+                      <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace pref="50" max="32767" attributes="0"/>
-          </Group>
-          <Group type="102" alignment="1" attributes="0">
-              <EmptySpace max="32767" attributes="0"/>
-              <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -298,8 +296,14 @@
           </Properties>
         </Component>
         <Component class="org.jdesktop.swingx.JXTextField" name="morada">
+          <Events>
+            <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="moradaFocusLost"/>
+          </Events>
         </Component>
         <Component class="org.jdesktop.swingx.JXTextField" name="cp1">
+          <Events>
+            <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="cp1FocusLost"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel9">
           <Properties>
@@ -307,8 +311,14 @@
           </Properties>
         </Component>
         <Component class="org.jdesktop.swingx.JXTextField" name="cp2">
+          <Events>
+            <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="cp2FocusLost"/>
+          </Events>
         </Component>
         <Component class="org.jdesktop.swingx.JXTextField" name="loc">
+          <Events>
+            <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="locFocusLost"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="mv">
           <Properties>
